--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ charset-normalizer==3.0.1
 click==8.1.3
 contourpy==1.0.7
 cryptography==39.0.1
-cv2==1.0.0
+cv==1.0.0
 cycler==0.11.0
 decorator==5.1.1
 dnspython==2.3.0
@@ -70,3 +70,4 @@ urllib3==1.26.14
 validators==0.20.0
 watchdog==2.2.1
 zipp==3.13.0
+opencv-python-headless
